@@ -1,3 +1,5 @@
+* Handle device cookie
+
 Version 5.6.2 - 2020-07-01
 * Bug fixes (see mercurial logs for details)
 
